# editpix

./: .eslintrc.js  .eslintrc.json  .gitignore  .npmignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.MD  jest.config.js  package-lock.json  package.json
.github/workflows/: main.yml  wasm-pack.yml
demo/: index.html
demo/css/: style.css
demo/gray_scale/: color_palette_demo.js  index.html  script.js
demo/render_quantize_img/: index.html
demo/scripts/: adjust_temperature_demo.js  black-white-filter-demo.js  black_white_demo.js  change-brightness-demo.js  change-contrast-demo.js  change-exposure-demo.js  change-highlights-demo.js  change-opacity-demo.js  change-saturation-demo.js  change-shadow-demo.js  change-sharpness-demo.js  change-temperature-demo.js  change-tint-demo.js  change_brighness.js  change_exposure_demo.js  change_highlights_demo.js  change_saturation.js  change_saturation_demo.js  change_shadow_demo.js  change_shadows.js  change_sharpness.js  change_tint_demo.js  color-conversion-demo.js  color-palette-demo.js  color-palette-wasm-demo.js  color_palette_demo.js  color_palette_wasm_demo.js  dominant-color-demo.js  dominant_color_demo.js  gray-scale-filter-demo.js  gray_scale_demo.js  higher-color-contrast-demo.js  (+9 more)
lib/: Cargo.toml
lib/src/: .gitignore  lib.rs
src/: color-selection.js  colors_to_black_and_white.js  decript.js  editpix.js  encript.js  gray_scale.js  gray_to_rgb.js  image-manager.js  image-palette.js  image_manager.js  quantization.js  utils.js
test/: core.test.js  editpix.test.js  index.html  reamde.md  script.js  utils.test.js
(+67 files in other folders)
