[package]
name = "editpix-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.web-sys]
version = "0.3.68"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

